// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h2 component should render with custom white color 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: Avenir Light,'Avenir Next','Segoe UI', sans-serif;
  font-size: 40px;
  line-height: 44px;
}

<h2
  className="c0"
  color="white"
>
  Lorem ipsum
</h2>
`;

exports[`h2 component should render with default css properties 1`] = `
.c0 {
  color: #212240;
  font-family: Avenir Light,'Avenir Next','Segoe UI', sans-serif;
  font-size: 40px;
  line-height: 44px;
}

<h2
  className="c0"
>
  Lorem ipsum
</h2>
`;
